--- a/MWR Config Editor.csproj
+++ b/MWR Config Editor.csproj
@@ -41,11 +41,14 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ConfigParser, Version=0.3.4.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Salaros.ConfigParser.0.3.4-preview1\lib\net45\ConfigParser.dll</HintPath>
+    </Reference>
     <Reference Include="Costura, Version=4.1.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.4.1.0\lib\net40\Costura.dll</HintPath>
     </Reference>
-    <Reference Include="INIFileParser, Version=2.5.2.0, Culture=neutral, PublicKeyToken=79af7b307b65cf3c, processorArchitecture=MSIL">
-      <HintPath>..\packages\ini-parser.2.5.2\lib\net20\INIFileParser.dll</HintPath>
+    <Reference Include="Fnv1a">
+      <HintPath>C:\Users\blusc\source\repos\FNV-1a\Fnv1a\bin\Debug\netstandard2.0\Fnv1a.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -65,9 +68,10 @@
   <ItemGroup>
     <Compile Include="CFGParser\Classes\CFGData.cs" />
     <Compile Include="CFGParser\Classes\DVAR.cs" />
-    <Compile Include="CFGParser\Classes\DVARS.cs" />
+    <Compile Include="CFGParser\DVARS.cs" />
     <Compile Include="CFGParser\Classes\CFGFile.cs" />
     <Compile Include="CFGParser\Classes\CFGLine.cs" />
+    <Compile Include="CFGParser\Utils\Extensions.cs" />
     <Compile Include="UI\DVARInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,9 +94,11 @@
   <ItemGroup>
     <EmbeddedResource Include="UI\DvarInfo.resx">
       <DependentUpon>DVARInfo.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
