--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aesop.Fnv1a" version="1.0.0" targetFramework="net47" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net47" />
   <package id="Fody" version="6.0.0" targetFramework="net47" developmentDependency="true" />
   <package id="ini-parser" version="2.5.2" targetFramework="net47" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3-beta1" targetFramework="net47" />
+  <package id="Salaros.ConfigParser" version="0.3.4-preview1" targetFramework="net47" />
 </packages>
