--- a/NLog.config
+++ b/NLog.config
@@ -12,7 +12,7 @@
             name="console"
             encoding="utf-8"
             layout="${time} | ${pad:padding=5:inner=${level:uppercase=true}} | ${message}"
-            detectConsoleAvailable="true" >
+            detectConsoleAvailable="false" >
       <highlight-row condition="level == LogLevel.Trace" foregroundColor="Gray"/>
       <highlight-row condition="level == LogLevel.Debug" foregroundColor="Cyan"/>
       <highlight-row condition="level == LogLevel.Info" foregroundColor="White"/>
